syntax = "proto3";
package ironpdfengineproto;
import "google/protobuf/timestamp.proto";
import "basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message PdfiumSignRequestStreamP {
  oneof request {
    InfoP info = 1;
    bytes certificate_file_bytes_chunk = 2;
    bytes signature_image_chunk = 3;
  }
  message InfoP {
    PdfDocumentP document = 1;
    string password = 2;
    optional google.protobuf.Timestamp signature_date = 3;
    optional string signing_contact = 4;
    optional string signing_location = 5;
    optional string signing_reason = 6;
    PdfiumSignaturePermissionsP signature_permission = 7;
    optional string time_stamp_url = 8;
    optional string internal_name = 9;
    optional int32 page_index = 10;
    optional int32 signature_image_x = 11;
    optional int32 signature_image_y = 12;
    optional int32 signature_image_w = 13;
    optional int32 signature_image_h = 14;
  }
}
message PdfiumSignResultP {
  oneof result_or_exception{
    int32 result = 1;
    RemoteExceptionP exception = 2;
  }
}

message PdfiumRemoveSignaturesRequestP {
  PdfDocumentP document = 1;
}

message PdfiumSignaturePermissionsP {
  int32 enum_value = 1;
}

message PdfiumGetVerifiedSignatureRequestStreamP {
  oneof request {
    InfoP info = 1;
    bytes data_chunk = 2;
  }
  message InfoP {
    PdfDocumentP document = 1;
  }
}

message PdfiumGetVerifySignatureResultP {
  oneof result_or_exception{
    PdfiumVerifiedSignatureCollectionP verified_signatures = 1;
    RemoteExceptionP exception = 2;
  }
}
message PdfiumGetSignatureCountResultP {
  oneof result_or_exception {
    int32 result = 1;
    RemoteExceptionP exception = 2;
  }
}
message PdfiumGetSignatureCountRequestP {
  PdfDocumentP document = 1;
}

message PdfiumVerifiedSignatureCollectionP {
  repeated PdfiumVerifiedSignatureP verified_signatures = 1;
}

message PdfiumVerifiedSignatureP {
  string signature_name = 1;
  string signing_contact = 2;
  string signing_reason = 3;
  string signing_location = 4;
  google.protobuf.Timestamp signing_date = 5;
  bool is_valid = 6;
  string filter = 7;
}

message PdfiumAddSignatureImageRequestStreamP {
  oneof request {
    InfoP info = 1;
    bytes data_chunk = 2;
  }
  message InfoP {
    PdfDocumentP document = 1;
    int32 page_index = 2;
    int32 signature_index = 3;
    double x = 4;
    double y = 5;
    double desired_width = 6;
    double desired_height = 7;
  }
}

message PdfiumGetSignatureByteRangeRequestP {
    PdfDocumentP document = 1;
    int32 index =2;
}